@@ -391,7 +391,8 @@ OTHER_MAKEFILES= OS2_MAKEFILE NT_MAKEFILE NT_THREADS_MAKEFILE gc.mak \
 		 BCC_MAKEFILE EMX_MAKEFILE WCC_MAKEFILE Makefile.dj \
 		 PCR-Makefile SMakefile.amiga Makefile.DLLs \
 		 digimars.mak Makefile.direct NT_STATIC_THREADS_MAKEFILE \
-		 NT_X64_STATIC_THREADS_MAKEFILE configure_atomic_ops.sh
+		 NT_X64_STATIC_THREADS_MAKEFILE NT_X64_THREADS_MAKEFILE \
+		 configure_atomic_ops.sh
 #	Makefile and Makefile.direct are copies of each other.
 
 OTHER_FILES= Makefile setjmp_t.c callprocs \
