@@ -1,9 +1,9 @@
 64-bit Windows on AMD64/Intel EM64T is somewhat supported in the 7.0
-release.  A collector can be built with Microsoft Visual C++ 2005.
+and later release.  A collector can be built with Microsoft Visual C++ 2005.
 The resulting test programs have been known to work at least once.
 More testing would clearly be helpful.
 
-Currently only NT_X64_STATIC_THREADS_MAKEFILE has been used in
+NT_X64_STATIC_THREADS_MAKEFILE has been used in
 this environment.  Copy this file to MAKEFILE, and then type "nmake"
 in a Visual C++ command line window to build the static library
 and the usual test programs.  To verify that the colllector is
@@ -12,6 +12,11 @@ gctest.exe.log after a few seconds.
 
 This process is completely analogous to NT_STATIC_THREADS_MAKEFILE
 for the 32-bit version.
+
+A similar procedure using NT_X64_THREADS_MAKEFILE should be usable to
+build the dynamic library.  Test_cpp.exe did not seem to run correctly this
+way.  It seems that we're getting the wrong instances of operator new/delete
+in some cases.  The C tests seemed OK.
 
 Note that currently a few warnings are still generated by default,
 and a number of others have been explicitly turned off in the makefile.
